# sentience-workers

./: .gitignore  Cargo.toml  Dockerfile  TODO.md  docker-compose.yml
ingest-vestibule-retriever/: .env.example  Cargo.toml
ingest-vestibule-retriever/src/: db.rs  discord_handler.rs  lib.rs  main.rs
ingest-vestibule-retriever/src/handlers/: attachments.rs  author.rs  channel.rs  emoji.rs  message.rs  message_edit.rs  mod.rs  reaction.rs
job-watcher/: Cargo.toml
job-watcher/src/: main.rs
