[workspace]
members = ["ingest-vestibule-retriever"]
resolver = "2"

[workspace.dependencies]
color-eyre = "0.6"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono", "json"] }
ormlite = { version = "0.24.3", features = ["postgres", "uuid", "chrono", "json"] }
serenity = "0.12.5"
unidb = { git = "https://github.com/Vimothy-s-Vestibule/unidb-schema" }
