[package]
name = "ingest-vestibule-retriever"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
ormlite = { workspace = true }
serenity = { workspace = true }
unidb = { workspace = true }
reqwest = "0.13.3"
base64 = "0.22.1"
chrono = "0.4.44"
uuid = { version = "1.23.1", features = ["v8"] }
sha2 = "0.11"
hex = "0.4.3"
aws-config = "1.8.16"
aws-sdk-s3 = "1.131.0"
